--- a/services.html
+++ b/services.html
@@ -88,7 +88,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="book_btn d-none d-lg-block">
-                                            <a href="contact.html">СВЯЗАТЬСЯ</a>
+                                            <a href="https://books.tonyonair.com.ua" target="_blank">МОИ КНИГИ</a>
                                     </div>
                                 </div>
                             </div>
