--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                             <p style="color:white">
                                 <font size="5">
-                                    Всем привет, меня зовут Антон Грищенко. <br /><br />
+                                    Всім привіт. <br /><br />
 
                                     Я профессионально занимаюсь видеосъемкой и написанием <br /> сценариев в городе
                                     Киев.
